# Agent-Home

./: .gitignore  README.md  agent-home-acp.sh  main.py  pyproject.toml  start_server.sh
acp/: __init__.py  __main__.py  bridge.py
agent/: compaction.py  crud.py  factory.py  runner.py  tools.py  types.py
agent_notes_to_self/: section1_db_design.md
api/: app.py  deps.py  fastapi_deps.py  routes.py  schemas.py
cli/: cli.py  notes.md
db/: connection.py  models.py
docs/: squash_merge_commit_message 5-22-26.md  squash_merge_scratchpad 5-22-26.md
docs/Agentic CLI Research/: SYNTHESIS.md  letta-code-quality.md
docs/Architecture/: architecture-evaluation.md  architecture-vision.md  memory-architecture-hybrid-design.md  possible architecture.drawio  possible-paths.md
docs/Archive/: synthesis.md
docs/Benchmarking/: framework-survey-2026-05-28.md  letta-tool-architecture.md  opencode_framework_benchmarking.md  opencode_framework_v2_pre_release.md  openhands-sdk-analysis.md  pi-feasibility-assessment.md
docs/MCP Agentic Tools Investigation/: dc_terminal_toolset_reference.md  mcp-fs-tools.md
docs/Planning/: agent-home-iter-cancellation-findings.md  cancellation_and_improved_persistence_plan.md  dogfooding_MVP_plan.md  gap4_context_reconstruction_design.md  implementation_plan.md  mcp-fs-tools.md  strategic_plan.md  toad_tui_plan.md  toad_tui_plan_scratch.md  tui_prototype.md  tui_spec.md  v2-implementation-plan.md
mcp_tools/: __init__.py  fs_proxy.py  test_connection.py
memory/: block_crud.py  system_prompt_compilation.py
messages/: messages.py
misc/: cancellation_and_persistence_review_JF_review_log.txt  capture_run_messages_findings.md  capture_run_messages_spike.py  immediate_raise_spike.py  test_routes_review_map.md
misc/conversation_history_spike/: README.md  dump_agent_history.py  exported_messages.json  haiku_spike_history.json  haiku_spike_history_readable.txt  import_letta_history.py  spike_notes.md
scripts/: live_test_reconstructor.py
scripts/reconstructor_output/: end_context.txt  midpoint_context.txt
tests/: conftest.py
tests/acp/: test_bridge_slash.py
tests/agent/: test_compaction.py  test_crud.py  test_factory.py  test_runner.py  test_tools.py  test_types.py
tests/api/: test_app.py  test_deps.py  test_fastapi_deps.py  test_map_to_sse.py  test_routes.py  test_schemas.py
tests/db/: test_connection.py  test_models.py  test_orm_expiry.py
utils/: ctx_reconstructor.py
(+28 files in other folders)
