[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "e-llm-agent-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "pydantic-ai>=1.97.0",
    "python-dotenv",
    "asgi-lifespan>=2.1.0",
    "httpx",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [".", "tests"]

[tool.pyright]
extraPaths = ["."]

[tool.hatch.build.targets.wheel]
packages = ["api", "agent", "memory", "messages", "db"]
