[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "e-llm-agent-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "pydantic-ai>=1.97.0",
    "python-dotenv",
    "asgi-lifespan>=2.1.0",
    "httpx",
    # DuckDuckGo search + web_fetch tools for pydantic-ai. These are the underlying
    # deps for pydantic-ai-slim[duckduckgo] and [web-fetch] extras. We use full
    # pydantic-ai (not slim), which doesn't expose those extras — direct deps work.
    # TODO: Consider switching to pydantic-ai-slim as a leaning operation later.
    "ddgs>=9.14.4",
    "markdownify>=1.2.3",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]

[tool.pytest]
markers = ["note: important info/caveats about tests"]
asyncio_mode = "auto"
pythonpath = [".", "tests"]

[tool.pyright]
extraPaths = ["."]

[project.scripts]
agent-home-acp = "acp.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["api", "agent", "memory", "messages", "db", "acp"]
